# core.py

./: .pylintrc  README.md  pyproject.toml  requirements.txt
surfy/: __init__.py  __main__.py  main.py  surfy.py
surfy/sqlite/: README.md  __init__.py  __main__.py  db.py
surfy/wiki/: README.md  __init__.py  __main__.py  main.py
surfy/wikipedia/: __init__.py  __main__.py
surfy/words/: README.md  __init__.py  main.py
tests/: __init__.py  __main__.py  init.py  sqlite.py  sqlite_test.py  test.py  tests.py  wiki_test.py  words_test.py
